<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.SignUpPasswordActivity">

    <EditText
        android:id="@+id/edt_PasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/passwordSignUp" />

    <EditText
        android:id="@+id/edt_REPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/re_passwordSignUp" />

    <Button
        android:id="@+id/btn_SignUp"
        android:onClick="SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_SignUp" />

</LinearLayout>